--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -34,7 +34,7 @@
   </head>
 
   <body>
-    <header class="navbar navbar-inverse">
+    <header id="header" class="navbar navbar-inverse">
       <div class="navbar-inner">
         <div class="container-narrow">
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
